# vectorforge

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.mcp  Dockerfile.test  LICENSE  README.md  build.sh  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  todo.md
.claude/skills/python-docs/: SKILL.md
.claude/skills/python-docs/reference/: function-docstrings.md  module-docstrings.md
.opencode/skills/python-docs/reference/: module-docstrings.md
benchmarks/: QUICKSTART.md  README.md  __init__.py  conftest.py  run_benchmarks.py  test_file_processing_benchmarks.py  test_hnsw_migration_benchmarks.py  test_indexing_benchmarks.py  test_metrics_benchmarks.py  test_persistence_benchmarks.py  test_scaling_benchmarks.py  test_search_benchmarks.py
cpp/include/vectorforge/: similarity.h
cpp/src/: hello.cpp  module.cpp
demo/: __init__.py  __main__.py  client.py  main.py
demo/features/: __init__.py  collections.py  documents.py  files.py  index.py  search.py  system.py
deprecated/: CMakeLists.txt  README.md  build.sh
deprecated/cpp/include/: cpu_features.h
deprecated/cpp/include/vectorforge/: similarity.h
deprecated/cpp/src/: module.cpp  similarity.cpp  similarity_avx_512.cpp  similarity_scalar.cpp
deprecated/docs/: SIMD_AVX_Guide.md
docs/: DOCKER_GUIDE.md  todo.md
python/: .isort.cfg  Dockerfile  Dockerfile.test  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
python/benchmarks/: .gitignore  README.md  __init__.py  conftest.py  run_benchmarks.py  test_file_processing_benchmarks.py  test_indexing_benchmarks.py  test_persistence_benchmarks.py  test_scaling_benchmarks.py  test_search_benchmarks.py
python/mcp/: README.md  server.py  utils.py
python/mcp/tools/: __init__.py  documents.py  files.py  index.py  search.py
python/tests/: __init__.py  conftest.py  test_cpp_integration.py  test_doc_endpoints.py  test_doc_processor.py  test_file_endpoints.py  test_index_endpoints.py  test_mcp_tools.py  test_search_endpoints.py  test_system_endpoints.py  test_vector_engine.py  verify_cpp_similarity.py
python/vectorforge/: __init__.py  __main__.py  api.py  config.py  doc_processor.py  logging_config.py  models.py  test_api.py  utils.py  vector_engine.py
python/vectorforge/api/: __init__.py  config.py  decorators.py  documents.py  files.py  index.py  search.py  system.py
python/vectorforge/models/: __init__.py  documents.py  files.py  index.py  metadata.py  metrics.py  search.py
python/vectorforge_mcp/: README.md  __init__.py  config.py  decorators.py  instance.py  server.py  utils.py
python/vectorforge_mcp/tools/: __init__.py  documents.py  files.py  index.py  search.py  system.py
tests/: conftest.py  test_collections.py  test_doc_endpoints.py  test_doc_processor.py  test_file_endpoints.py  test_index_endpoints.py  test_reranker.py  test_search_endpoints.py  test_system_endpoints.py  test_vector_engine.py
vectorforge/: __init__.py  __main__.py  collection_manager.py  config.py  doc_processor.py  logging.py  logging_config.py  metrics_store.py  vector_engine.py
vectorforge/api/: __init__.py  collections.py  config.py  decorators.py  documents.py  files.py  index.py  search.py  system.py
vectorforge/models/: __init__.py  collections.py  documents.py  files.py  index.py  metadata.py  metrics.py  search.py
vectorforge_mcp/: .env.example  README.md  __init__.py  __main__.py  client.py  config.py  decorators.py  instance.py  logging.py  server.py  start.py  utils.py
vectorforge_mcp/tools/: __init__.py  collections.py  documents.py  files.py  index.py  search.py  system.py
