[project]
name = "vectorforge"
version = "1.0.3"
description = "High-performance in-memory vector database"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "sentence-transformers>=5.1.2",
    "python-multipart>=0.0.20",
    "mypy>=1.19.1",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
vectorforge-api = "vectorforge.__main__:main"
vectorforge-mcp = "vectorforge_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "isort>=7.0.0",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "memory-profiler>=0.61.0",
    "faker>=40.1.2",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
]
mcp = [
    "fastmcp>=2.14.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]

# Benchmark configuration
addopts = [
    "--benchmark-warmup=on",
    "--benchmark-min-rounds=5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "scale: marks tests with a specific scale level",
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["vectorforge"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | data
)/
'''

[tool.mypy]
python_version = "3.11"
exclude = "tests/|benchmarks/"
strict = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
    "untyped-decorator"
]
