[project]
name = "vectorforge"
version = "0.9.0"
description = "High-performance in-memory vector database"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "uuid>=1.30",
    "pymupdf>=1.26.6",
    "sentence-transformers>=5.1.2",
    "python-multipart>=0.0.20",
    "isort>=7.0.0",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["vectorforge"]
lines_after_imports = 2
lines_between_types = 1
