[project]
name = "vectorforge"
version = "0.9.0"
description = "High-performance in-memory vector database"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "uuid>=1.30",
    "sentence-transformers>=5.1.2",
    "python-multipart>=0.0.20",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pymupdf>=1.26.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
vectorforge-api = "vectorforge.api:main"
vectorforge-mcp = "vectorforge_mcp.server:main"

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.14.1",
]

[tool.mypy]
python_version = "3.11"
disable_error_code = [
    "import-untyped",
    "import-not-found",
    "untyped-decorator"
]
exclude = ["tests/"]
strict = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["vectorforge"]
lines_after_imports = 2
lines_between_types = 1

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
mcp = [
    "fastmcp>=2.14.1",
]
