[project]
name = "vectorforge"
version = "0.9.0"
description = "High-performance in-memory vector database"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "uuid>=1.30",
    "sentence-transformers>=5.1.2",
    "python-multipart>=0.0.20",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
vectorforge-api = "vectorforge.api:main"
vectorforge-mcp = "vectorforge_mcp.server:main"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "memory-profiler>=0.61.0",
    "faker>=40.1.2",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
]
mcp = [
    "fastmcp>=2.14.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | data
)/
'''
